<resources>
    <string name="app_name">HITG Calculator</string>
    <string name="digit_0" translatable="false">0</string>
    <string name="digit_1" translatable="false">1</string>
    <string name="digit_2" translatable="false">2</string>
    <string name="digit_3" translatable="false">3</string>
    <string name="digit_4" translatable="false">4</string>
    <string name="digit_5" translatable="false">5</string>
    <string name="digit_6" translatable="false">6</string>
    <string name="digit_7" translatable="false">7</string>
    <string name="digit_8" translatable="false">8</string>
    <string name="digit_9" translatable="false">9</string>
    <string name="dot_sign" translatable="false">.</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="multiplication_sign" translatable="false">×</string>
    <string name="division_sign" translatable="false">÷</string>
    <string name="percent_sign" translatable="false">%</string>
    <string name="square_root_sign" translatable="false">√</string>
    <string name="equals_sign" translatable="false">=</string>
    <string name="del" translatable="false">DEL</string>
    <string name="mrc" translatable="false">MRC</string>
    <string name="m_minus" translatable="false">M-</string>
    <string name="m_plus" translatable="false">M+</string>
    <string name="ce" translatable="false">CE</string>
    <string name="invert_signal" translatable="false">+/-</string>
    <string name="memory_symbol" translatable="false">M</string>
    <string name="error">ERROR</string>
    <string name="cont_desc_0">Zero</string>
    <string name="cont_desc_1">One</string>
    <string name="cont_desc_2">Two</string>
    <string name="cont_desc_3">Three</string>
    <string name="cont_desc_4">Four</string>
    <string name="cont_desc_5">Five</string>
    <string name="cont_desc_6">Six</string>
    <string name="cont_desc_7">Seven</string>
    <string name="cont_desc_8">Eight</string>
    <string name="cont_desc_9">Nine</string>
    <string name="cont_desc_minus">Minus</string>
    <string name="cont_desc_memory_recall">Memory Recall</string>
    <string name="cont_desc_memory_minus">Subtract from memory</string>
    <string name="cont_desc_memory_plus">Add to memory</string>
    <string name="cont_desc_clear_entry">Clear Entry</string>
    <string name="cont_desc_percent">Percent</string>
    <string name="cont_desc_square_root">Square Root</string>
    <string name="cont_desc_invert_signal">Invert Signal</string>
    <string name="cont_desc_delete">Delete</string>
    <string name="cont_desc_divide">Divide</string>
    <string name="cont_desc_multiplication">Multiply</string>
    <string name="cont_desc_point">Point</string>
    <string name="cont_desc_plus">Plus</string>
    <string name="cont_desc_equals">Equals</string>
    <string name="cont_desc_memory_value">Memory Value:</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="link_privacy_policy" translatable="false">https://helton-isac.github.io/CalcHITG/privacy_policy.html</string>
</resources>
