<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:padding="4dp"
    android:id="@+id/calculatorView"
    tools:context="br.com.hitg.calculator.calculator.CalculatorActivity">

    <TextView
        android:id="@+id/txtMemoryDisplay"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@android:color/background_light"
        android:fontFamily="monospace"
        android:text="@string/digit_0"
        android:gravity="center_vertical|end"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtSignals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtDisplay" />

    <TextView
        android:id="@+id/txtMemory"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/memory_symbol"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMemoryDisplay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtSignals" />

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:fontFamily="monospace"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:text="@string/digit_0"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/btnMRC"
        app:layout_constraintEnd_toStartOf="@+id/txtSignals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMemoryDisplay" />

    <TextView
        android:id="@+id/txtSignals"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:fontFamily="monospace"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="1"
        android:text="@string/plus_sign"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btnCE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDisplay"
        app:layout_constraintTop_toBottomOf="@+id/txtMemory" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnMRC"
        style="@style/ButtonStyle"
        android:theme="@style/BlueButtonTheme"
        android:text="@string/mrc"
        app:layout_constraintBottom_toTopOf="@id/btnPercent"
        app:layout_constraintEnd_toStartOf="@+id/btnMMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnMMinus"
        style="@style/ButtonStyle"
        android:theme="@style/BlueButtonTheme"
        android:text="@string/m_minus"
        app:layout_constraintBottom_toTopOf="@id/btnSquareRoot"
        app:layout_constraintEnd_toStartOf="@+id/btnMPlus"
        app:layout_constraintStart_toEndOf="@id/btnMRC"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnMPlus"
        style="@style/ButtonStyle"
        android:theme="@style/BlueButtonTheme"
        android:text="@string/m_plus"
        app:layout_constraintBottom_toTopOf="@id/btnInvertSignal"
        app:layout_constraintEnd_toStartOf="@+id/btnCE"
        app:layout_constraintStart_toEndOf="@id/btnMMinus"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCE"
        style="@style/ButtonStyle"
        android:theme="@style/RedButtonTheme"
        android:text="@string/ce"
        app:layout_constraintBottom_toTopOf="@id/btnDel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPercent"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/percent_sign"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@+id/btnSquareRoot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMRC" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSquareRoot"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/square_root_sign"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@+id/btnInvertSignal"
        app:layout_constraintStart_toEndOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/btnMMinus" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnInvertSignal"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/invert_signal"
        app:layout_constraintBottom_toTopOf="@id/btnNine"
        app:layout_constraintEnd_toStartOf="@+id/btnDel"
        app:layout_constraintStart_toEndOf="@+id/btnSquareRoot"
        app:layout_constraintTop_toBottomOf="@+id/btnMPlus" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDel"
        style="@style/ButtonStyle"
        android:theme="@style/RedButtonTheme"
        android:text="@string/del"
        app:layout_constraintBottom_toTopOf="@id/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnInvertSignal"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSeven"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_7"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnEight"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_8"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnSquareRoot" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnNine"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_9"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnInvertSignal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDivide"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/division_sign"
        app:layout_constraintBottom_toTopOf="@id/btnMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnFour"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_4"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnFive"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSix"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnMultiply"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/multiplication_sign"
        app:layout_constraintBottom_toTopOf="@id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnOne"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnTwo"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toTopOf="@id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnThree"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnMinus"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/minus_sign"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnZero"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/digit_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDot"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/dot_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnEquals"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/equals_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPlus"
        style="@style/ButtonStyle"
        android:theme="@style/BlackButtonTheme"
        android:text="@string/plus_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEquals"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

</android.support.constraint.ConstraintLayout>
